# Copyright 2026 INNO LOTUS PTY LTD
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nps-lib"
version = "1.0.0-alpha.2"
description = "Python SDK for the Neural Protocol Suite (NPS)"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "LabAcacia / INNO LOTUS PTY LTD" }]
requires-python = ">=3.11"
keywords = ["nps", "neural-protocol-suite", "ai", "agent", "protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "msgpack>=1.0.8",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nps_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=nps_sdk --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["nps_sdk"]
omit = ["tests/*"]
